rust/macros/tests/invalid/target/debug/deps/missing_argument_rs-4012d31b991a73f3.d
/home/jai/Rust/Exercism/rust/macros/tests/invalid/target/debug/deps/missing_argument_rs-4012d31b991a73f3.rmeta: missing-argument.rs

/home/jai/Rust/Exercism/rust/macros/tests/invalid/target/debug/deps/missing_argument_rs-4012d31b991a73f3.d: missing-argument.rs

missing-argument.rs:
